--- a/construction.html
+++ b/construction.html
@@ -5,35 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Construction Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Construction Calculators</title> 
+
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free construction Calculators for Farmers, Gardeners & Scientists">
-<meta name="description" content="Access a powerful set of free construction calculators. Calculate seed rate, fertilizer mix, crop yield, pesticide usage, and more — built for farmers, gardeners, and researchers.">
-
-
+<meta name="description" content="Take the guesswork out of building with our construction calculators. From planning materials to checking measurements, they make every step of your project easier, clearer, and more reliable.">
 
 <link rel="canonical" href="https://calclulo.com/construction">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/construction">
-<meta property="og:title" content="Free construction Calculators for Farmers, Gardeners & Scientists">
-<meta property="og:description" content="Calculate seed rate, crop yield, fertilizers, pesticides, and more with this free collection of farming calculators. Trusted by construction professionals.">
-<meta property="og:image" content="https://calclulo.com/assets/construction-thumbnail.jpg">
-
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/construction">
-<meta name="twitter:title" content="Free construction Calculators for Farmers, Gardeners & Scientists">
-<meta name="twitter:description" content="Quick, reliable tools for seed rate, pesticide use, crop yield, and more. Empowering farmers and researchers with accurate calculations.">
-<meta name="twitter:image" content="https://calclulo.com/assets/construction-thumbnail.jpg">
+<meta property="og:title" content="Free construction Calculators">
+<meta property="og:description" content="Take the guesswork out of building with our construction calculators. From planning materials to checking measurements, they make every step of your project easier, clearer, and more reliable.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
@@ -43,11 +33,11 @@
     "@type": "WebPage",
     "name": "Free Construction Calculators",
     "url": "https://calclulo.com/construction",
-    "description": "This page features free consultation calculators designed for farmers, gardeners, pet owners, and researchers. Calculate seed rate, fertilizer mix, pesticide usage, and more with precision.",
+    "description": "Take the guesswork out of building with our construction calculators. From planning materials to checking measurements, they make every step of your project easier, clearer, and more reliable.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
-      "name": "Your Brand Name",
+      "name": "Calclulo",
       "url": "https://calclulo.com"
     }
   }
