--- a/ecology.html
+++ b/ecology.html
@@ -8,34 +8,24 @@
 <title>Ecology Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Ecology Calculators for Sustainability and Environment">
-<meta name="description" content="Access a powerful set of free ecology calculators. Instantly calculate carbon footprint, emissions, energy use, water consumption, and more.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Use our ecology calculators to look closer at how your decisions impact the world around you. They simplify complex environmental numbers, making sense of energy consumption, resource management, and sustainability in a clear way that inspires smarter, greener choices for you and future generations.">
 
 <link rel="canonical" href="https://calclulo.com/ecology">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/ecology">
-<meta property="og:title" content="Free Ecology Calculators for Sustainability and Environment">
-<meta property="og:description" content="Measure environmental impact with accurate ecology calculators. Built for sustainable living, farming, and research.">
-<meta property="og:image" content="https://calclulo.com/assets/images/ecology calculators-thumbnail.png">
+<meta property="og:title" content="Free Ecology Calculators">
+<meta property="og:description" content="Use our ecology calculators to look closer at how your decisions impact the world around you. They simplify complex environmental numbers, making sense of energy consumption, resource management, and sustainability in a clear way that inspires smarter, greener choices for you and future generations.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/ecology">
-<meta name="twitter:title" content="Free Ecology Calculators for Sustainability and Environment">
-<meta name="twitter:description" content="Calculate your carbon footprint, emissions, and more using our free ecology tools. Designed for environmental awareness and sustainable action.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/ecology calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +33,7 @@
     "@type": "WebPage",
     "name": "Free Ecology Calculators",
     "url": "https://calclulo.com/ecology",
-    "description": "Explore our collection of free ecology calculators for carbon footprint, emissions, water usage, and sustainability metrics.",
+    "description": "Use our ecology calculators to look closer at how your decisions impact the world around you. They simplify complex environmental numbers, making sense of energy consumption, resource management, and sustainability in a clear way that inspires smarter, greener choices for you and future generations.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
