--- a/education.html
+++ b/education.html
@@ -5,37 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Education Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Education Calculators</title>    
+
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+</script>
+
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Education Calculators for Students and Teachers">
-<meta name="description" content="Access a powerful set of free education calculators. Calculate GPA, grade average, study time, exam scores, and more with ease.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Calculation is most of the time exhausting and it seems like a boring habit in learning rules and formulas after studying. However, using the proper tools, it does not have to be like that. Our educational calculators can make it easy and the challengingly big works can be stripped simpler into understandable steps and some form of light thrown in between your studies.">
 
 <link rel="canonical" href="https://calclulo.com/education">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/education">
-<meta property="og:title" content="Free Education Calculators for Students and Teachers">
-<meta property="og:description" content="Enhance your learning with smart education tools. Calculate grades, study time, and academic performance easily.">
-<meta property="og:image" content="https://calclulo.com/assets/images/education calculators-thumbnail.png">
+<meta property="og:title" content="Free Education Calculators">
+<meta property="og:description" content="Calculation is most of the time exhausting and it seems like a boring habit in learning rules and formulas after studying. However, using the proper tools, it does not have to be like that. Our educational calculators can make it easy and the challengingly big works can be stripped simpler into understandable steps and some form of light thrown in between your studies.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/education">
-<meta name="twitter:title" content="Free Education Calculators for Students and Teachers">
-<meta name="twitter:description" content="Smart academic tools to help you calculate grades, plan study time, and boost performance. Perfect for students and educators.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/education calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +37,7 @@
     "@type": "WebPage",
     "name": "Free Education Calculators",
     "url": "https://calclulo.com/education",
-    "description": "Explore our free calculators for GPA, grade prediction, study planning, and more — ideal for students and teachers.",
+    "description": "Calculation is most of the time exhausting and it seems like a boring habit in learning rules and formulas after studying. However, using the proper tools, it does not have to be like that. Our educational calculators can make it easy and the challengingly big works can be stripped simpler into understandable steps and some form of light thrown in between your studies.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
