--- a/everyday-life.html
+++ b/everyday-life.html
@@ -5,49 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Everyday Life</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Everyday Life Calculators</title>  
+
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+</script>      
+
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Everyday Life Tools for Home, Work & Daily Tasks">
-<meta name="description" content="Access a collection of free Everyday Life tools. Calculate expenses, plan tasks, track daily needs, and more — perfect for families, individuals, and everyday use.">
-
-
+<meta name="description" content="In our daily life, there are hundreds of mini calculations, budget planning, routine scheduling, etc. our everyday life calculators remove the pain associated with the number thereby providing you with both quick and clear cut answers which makes decision making in everyday life easy and manageable.">
 
 <link rel="canonical" href="https://calclulo.com/everyday-life">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/everyday-life">
-<meta property="og:title" content="Free Everyday Life Tools for Home, Work & Daily Tasks">
-<meta property="og:description" content="Make daily tasks simpler with free Everyday Life tools. Calculate expenses, plan routines, track everyday needs, and more — trusted by thousands worldwide.">
-<meta property="og:image" content="https://calclulo.com/assets/everyday-life-thumbnail.jpg">
+<meta property="og:title" content="Free Everyday Life Calculators">
+<meta property="og:description" content="In our daily life, there are hundreds of mini calculations, budget planning, routine scheduling, etc. our everyday life calculators remove the pain associated with the number thereby providing you with both quick and clear cut answers which makes decision making in everyday life easy and manageable.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/everyday-life">
-<meta name="twitter:title" content="Free Everyday Life Tools for Home, Work & Daily Tasks">
-<meta name="twitter:description" content="Quick, reliable tools to simplify your daily life. From expenses to task planning — everything you need, all in one place.">
-<meta name="twitter:image" content="https://calclulo.com/assets/everyday-life-thumbnail.jpg">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Free Everyday Life Tools",
+    "name": "Free Calculators for Everyday Life ",
     "url": "https://calclulo.com/everyday-life",
-    "description": "Discover free Everyday Life tools to simplify tasks, plan your day, manage expenses, and more. Ideal for individuals, families, and students.",
+    "description": "In our daily life, there are hundreds of mini calculations, budget planning, routine scheduling, etc. our everyday life calculators remove the pain associated with the number thereby providing you with both quick and clear cut answers which makes decision making in everyday life easy and manageable.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
-      "name": "Your Brand Name",
+      "name": "Calclulo",
       "url": "https://calclulo.com"
     }
   }
@@ -197,7 +192,7 @@ Everyday Life
 <p data-name-category="everyday life" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p clamped" id="categoryText">
-   There are simple questions it is possible to handle using numbers in everyday life: It is not as hard as arranging a personal time schedule; which includes how to fit as many activities in a day as possible. The rather day to day life calculators are present to make those instances easier. They transform day to day problems into responses that are straightforward and easygoing in a way that you do not waste your time idling and worrying. Such calculators assist you in providing solutions to some of the basic, everyday taxing problematic situations that life presents to you whether you are trying to handle time and tasks, quick verdicts or merely mind exercises. People do not need to take so much energy to think. Get the calculators to do the hard work and assist you to work smart.
+   You have little things in everyday life where numbers just creep into your thoughts whether in solving time, in organizing yourself or running fast decisions that shape your day. These small calculations can seem an awful lot of pressure as life goes by at crazy-fast speeds. Our everyday life calculators come in to relieve you of that burden. They simplify complex numbers to straight forward simple answers, which leaves you space to breathe and concentrate and make better decisions. Whether you're planning your schedule, managing resources or simply trying to make sense of the daily tasks, these tools help you get more confident handling life, saving time and spending your energy on what you should be.
 
 
   </p>
