--- a/finance.html
+++ b/finance.html
@@ -5,37 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Finance Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Finance Calculators</title>
+
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Finance Calculators for Personal and Business Use">
-<meta name="description" content="Access a powerful set of free finance calculators. Instantly calculate loan payments, interest, savings growth, budgeting, and more.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Concerned about financial matters? These financial calculators are like your cool, math-savvy friend, so don't be. They're here to make things easy, whether you're trying to figure out how to afford that new device or are simply confused by interest rates. Enter your information to receive prompt responses along with some useful advice.">
 
 <link rel="canonical" href="https://calclulo.com/finance">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/finance">
-<meta property="og:title" content="Free Finance Calculators for Personal and Business Use">
-<meta property="og:description" content="Plan smarter with accurate finance calculators. Track interest, calculate savings, and manage money effectively.">
-<meta property="og:image" content="https://calclulo.com/assets/images/finance calculators-thumbnail.png">
+<meta property="og:title" content="Free Finance Calculators">
+<meta property="og:description" content="Concerned about financial matters? These financial calculators are like your cool, math-savvy friend, so don't be. They're here to make things easy, whether you're trying to figure out how to afford that new device or are simply confused by interest rates. Enter your information to receive prompt responses along with some useful advice.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/finance">
-<meta name="twitter:title" content="Free Finance Calculators for Personal and Business Use">
-<meta name="twitter:description" content="Use these reliable finance tools to estimate loans, manage budgets, and grow your savings. Trusted by individuals and businesses.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/finance calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +38,7 @@
     "@type": "WebPage",
     "name": "Free Finance Calculators",
     "url": "https://calclulo.com/finance",
-    "description": "Explore our collection of free finance calculators for interest, loans, savings, investment, and budgeting.",
+    "description": "Concerned about financial matters? These financial calculators are like your cool, math-savvy friend, so don't be. They're here to make things easy, whether you're trying to figure out how to afford that new device or are simply confused by interest rates. Enter your information to receive prompt responses along with some useful advice.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
