--- a/food.html
+++ b/food.html
@@ -5,37 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Food Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Food Calculators</title> 
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>  
+  
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
-
-<meta name="title" content="Free Food Calculators for Nutrition and Cooking">
-<meta name="description" content="Access a powerful set of free food calculators. Instantly calculate calories, macronutrients, serving sizes, recipe scaling, and more.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Meal Planning, baking and cooking of meals should not be a guessing game. Using our food calculators, it is simple to measure, convert, and balance ingredients, and different complex recipes and nutritional calculations are simplified into simple, reliable results.">
 
 <link rel="canonical" href="https://calclulo.com/food">
-
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/food">
 <meta property="og:title" content="Free Food Calculators for Nutrition and Cooking">
-<meta property="og:description" content="Track your meals and plan recipes with our accurate food calculators. Built for healthy living and cooking precision.">
-<meta property="og:image" content="https://calclulo.com/assets/images/food calculators-thumbnail.png">
+<meta property="og:description" content="Meal Planning, baking and cooking of meals should not be a guessing game. Using our food calculators, it is simple to measure, convert, and balance ingredients, and different complex recipes and nutritional calculations are simplified into simple, reliable results.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/food">
-<meta name="twitter:title" content="Free Food Calculators for Nutrition and Cooking">
-<meta name="twitter:description" content="From calories to macronutrients, use these calculators to eat smarter and cook better. Great for health, fitness, and meal prep.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/food calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +36,7 @@
     "@type": "WebPage",
     "name": "Free Food Calculators",
     "url": "https://calclulo.com/food",
-    "description": "Explore our collection of free food and nutrition calculators to track calories, plan meals, and cook with confidence.",
+    "description": "Meal Planning, baking and cooking of meals should not be a guessing game. Using our food calculators, it is simple to measure, convert, and balance ingredients, and different complex recipes and nutritional calculations are simplified into simple, reliable results.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
