--- a/health.html
+++ b/health.html
@@ -5,37 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Health Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Health Calculators</title>
+
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script> 
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Health Calculators for Nutrition, Fitness & Wellness">
-<meta name="description" content="Explore a powerful set of free Health calculators. Track BMI, calorie needs, fat intake, ideal weight, and more — built for anyone focused on wellness.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="The first thing to do to take care of your health is to know your body. It becomes easier with our health calculators transforming numbers into valuable information, be it following up on weight, assessing the body mass index, calculating the nutritional intake on a daily basis or even keeping track of the fitness targets.">
 
 <link rel="canonical" href="https://calclulo.com/health">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/health/health-calculators">
-<meta property="og:title" content="Free Health Calculators for Nutrition, Fitness & Wellness">
-<meta property="og:description" content="Track your BMI, daily calories, fat intake, and more with easy, accurate health calculators. Great for anyone working on their wellness goals.">
-<meta property="og:image" content="https://calclulo.com/assets/images/health-calculators-thumbnail.png">
+<meta property="og:title" content="Free Health Calculators">
+<meta property="og:description" content="The first thing to do to take care of your health is to know your body. It becomes easier with our health calculators transforming numbers into valuable information, be it following up on weight, assessing the body mass index, calculating the nutritional intake on a daily basis or even keeping track of the fitness targets.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/health/health-calculators">
-<meta name="twitter:title" content="Free Health Calculators for Nutrition, Fitness & Wellness">
-<meta name="twitter:description" content="Quick, helpful tools to track your health. Calculate BMI, calories, ideal weight, and more — perfect for fitness and nutrition planning.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/health-calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +38,7 @@
     "@type": "WebPage",
     "name": "Free Health Calculators",
     "url": "https://calclulo.com/health/health-calculators",
-    "description": "This page features free health calculators made for anyone focused on wellness, fitness, or nutrition. Track BMI, calories, fat intake, and more with ease.",
+    "description": "The first thing to do to take care of your health is to know your body. It becomes easier with our health calculators transforming numbers into valuable information, be it following up on weight, assessing the body mass index, calculating the nutritional intake on a daily basis or even keeping track of the fitness targets.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -197,7 +192,7 @@ Everyday Life
 <p data-name-category="health" class="description-header-info-calculator-numb"></p>
 
   <p class="category-info-p clamped" id="categoryText">
-    Health is among the most significant in our lives but sometimes it seems like there are complex figures, formulas, and medical terminologies are involved. Our health calculators come in where. They are meant to simplify medical concepts in terms of medical doctors checking out formulas, also in terms of medical students learning the basics as well as the general person who just wonders what is happening to their own body.
+    Health is among the most significant in our lives but sometimes it seems like there are complex figures, formulas, and medical terminologies are involved. Our health calculators comes in here. They are meant to simplify medical concepts in terms of medical doctors checking out formulas, also in terms of medical students learning the basics as well as the general person who just wonders what is happening to their own body.
 
 Whether you have ever wondered roughly how much of your body blood is, or how to modify medication to suit children? How to attempt to perceive the meaning behind various health scores and risk factors? Being able to convert technical measurements into straightforward, visually suitable and easy-to-understand, personal outcomes, these calculators make technical aspects less complex. The same features the tracking of fitness and nutrition and even a discovery of medical risk screening that help overcome the need to be informed.
   </p>
