--- a/other.html
+++ b/other.html
@@ -5,37 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Other Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Other Calculators</title>
+
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script> 
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
-<meta name="description" content="Access a powerful set of free agriculture calculators. Calculate seed rate, fertilizer mix, crop yield, pesticide usage, and more — built for farmers, gardeners, and researchers.">
-
-
+<meta name="description" content="Did we have any activities you would be interested in? We have a grab-bag of calculators that you can use on all the strange, weird, difficult, and unanticipated problems of life.">
 
 <link rel="canonical" href="https://calclulo.com/agriculture">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/agriculture">
-<meta property="og:title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
-<meta property="og:description" content="Calculate seed rate, crop yield, fertilizers, pesticides, and more with this free collection of farming calculators. Trusted by agricultural professionals.">
-<meta property="og:image" content="https://calclulo.com/assets/agriculture-thumbnail.jpg">
+<meta property="og:title" content="Free Agriculture Calculators">
+<meta property="og:description" content="Did we have any activities you would be interested in? We have a grab-bag of calculators that you can use on all the strange, weird, difficult, and unanticipated problems of life.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/agriculture">
-<meta name="twitter:title" content="Free Agriculture Calculators for Farmers, Gardeners & Scientists">
-<meta name="twitter:description" content="Quick, reliable tools for seed rate, pesticide use, crop yield, and more. Empowering farmers and researchers with accurate calculations.">
-<meta name="twitter:image" content="https://calclulo.com/assets/agriculture-thumbnail.jpg">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,11 +38,11 @@
     "@type": "WebPage",
     "name": "Free Agriculture Calculators",
     "url": "https://calclulo.com/agriculture",
-    "description": "This page features free agriculture calculators designed for farmers, gardeners, pet owners, and researchers. Calculate seed rate, fertilizer mix, pesticide usage, and more with precision.",
+    "description": "Did we have any activities you would be interested in? We have a grab-bag of calculators that you can use on all the strange, weird, difficult, and unanticipated problems of life.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
-      "name": "Your Brand Name",
+      "name": "Calclulo",
       "url": "https://calclulo.com"
     }
   }
