--- a/physics.html
+++ b/physics.html
@@ -5,37 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Physics Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Physics Calculators</title>    
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Physics Calculators for Everyday Use">
-<meta name="description" content="Access a powerful set of free Physics calculators. Instantly convert units like length, weight, volume, temperature, data, and more with ease.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Our physics calculators assure everyone the ability to solve and comprehend more complicated physics.">
 
 <link rel="canonical" href="https://calclulo.com/physics">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/physics">
-<meta property="og:title" content="Free Physics Calculators for Everyday Use">
-<meta property="og:description" content="Quickly convert between units of length, weight, volume, temperature, and more. Use these accurate, free Physics calculators for daily tasks and professional needs.">
-<meta property="og:image" content="https://calclulo.com/assets/images/physics calculators-thumbnail.png">
+<meta property="og:title" content="Free Physics Calculators">
+<meta property="og:description" content="Our physics calculators assure everyone the ability to solve and comprehend more complicated physics.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/physics">
-<meta name="twitter:title" content="Free Physics Calculators for Everyday Use">
-<meta name="twitter:description" content="Reliable and easy-to-use unit converters — from meters to feet, Celsius to Fahrenheit, MB to GB, and beyond. Trusted by students, professionals, and curious minds.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/physics calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> 
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +37,7 @@
     "@type": "WebPage",
     "name": "Free Physics Calculators",
     "url": "https://calclulo.com/physics",
-    "description": "Explore our collection of free Physics calculators for units like length, mass, volume, temperature, and data. Perfect for everyday use and professional work.",
+    "description": "Our physics calculators assure everyone the ability to solve and comprehend more complicated physics.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
