--- a/sports.html
+++ b/sports.html
@@ -5,37 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Sports Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Sports Calculators</title>    
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Sports Calculators for Athletes and Coaches">
-<meta name="description" content="Access a powerful set of free sports calculators. Instantly calculate BMI, heart rate zones, pace, calories burned, training intensity, and more.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Our collection of sporting calculators is amazing and will assist a sports person, coach, and sports fans to monitor performance.">
 
 <link rel="canonical" href="https://calclulo.com/sports">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/sports">
-<meta property="og:title" content="Free Sports Calculators for Athletes and Coaches">
-<meta property="og:description" content="Train smarter with our free sports calculators. From endurance to recovery, these tools help you stay at peak performance.">
-<meta property="og:image" content="https://calclulo.com/assets/images/sports calculators-thumbnail.png">
+<meta property="og:title" content="Free Sports Calculators">
+<meta property="og:description" content="Our collection of sporting calculators is amazing and will assist a sports person, coach, and sports fans to monitor performance.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/sports">
-<meta name="twitter:title" content="Free Sports Calculators for Athletes and Coaches">
-<meta name="twitter:description" content="Calculate pace, heart rate, calories, and more with these accurate fitness tools. Built for training, performance, and recovery.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/sports calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +37,7 @@
     "@type": "WebPage",
     "name": "Free Sports Calculators",
     "url": "https://calclulo.com/sports",
-    "description": "Explore free tools to improve athletic performance — from pace and heart rate to calorie burn and BMI.",
+    "description": "Our collection of sporting calculators is amazing and will assist a sports person, coach, and sports fans to monitor performance.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
