--- a/statistics.html
+++ b/statistics.html
@@ -5,37 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Statistics Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Statistics Calculators</title>    
+
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>       
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Statistics Calculators for Data Analysis and Learning">
-<meta name="description" content="Access a powerful set of free statistics calculators. Analyze data, calculate probability, mean, median, standard deviation, and more with ease.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Our collection of statistics calculators helps you uncover patterns, make sense of numbers, and turn raw data into clear, actionable insights.">
 
 <link rel="canonical" href="https://calclulo.com/statistics">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/statistics">
-<meta property="og:title" content="Free Statistics Calculators for Data Analysis and Learning">
-<meta property="og:description" content="Easily calculate mean, median, probability, and standard deviation. These statistics tools are built for students, analysts, and anyone working with data.">
-<meta property="og:image" content="https://calclulo.com/assets/images/statistics calculators-thumbnail.png">
+<meta property="og:title" content="Free Statistics Calculators">
+<meta property="og:description" content="Our collection of statistics calculators helps you uncover patterns, make sense of numbers, and turn raw data into clear, actionable insights.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/statistics">
-<meta name="twitter:title" content="Free Statistics Calculators for Data Analysis and Learning">
-<meta name="twitter:description" content="Smart and accurate statistics calculators for analyzing data. Great for students, teachers, and professionals working with numbers.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/statistics calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +38,7 @@
     "@type": "WebPage",
     "name": "Free Statistics Calculators",
     "url": "https://calclulo.com/statistics/statistics-calculators",
-    "description": "Explore our free statistics calculators to work with data, probability, averages, and more. Perfect for students, researchers, and everyday problem solving.",
+    "description": "Our collection of statistics calculators helps you uncover patterns, make sense of numbers, and turn raw data into clear, actionable insights.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
