--- a/conversion.html
+++ b/conversion.html
@@ -5,35 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Conversion Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Conversion Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+</script> 
+
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Conversion Calculators for Everyday Use">
-<meta name="description" content="Access a powerful set of free conversion calculators. Instantly convert units like length, weight, volume, temperature, data, and more with ease.">
+<meta name="description" content="Units conversation is not a frustrating issue to deal with. Conversion of measurements can be also transformed as easily as possible through the help of our conversion calculators and you can also be sure of the results that you are working with.">
 
-<meta name="author" content="Calclulo">
-
-<link rel="canonical" href="https://calclulo.com//conversion">
-
+<link rel="canonical" href="https://calclulo.com/conversion">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://calclulo.com//conversion">
-<meta property="og:title" content="Free Conversion Calculators for Everyday Use">
-<meta property="og:description" content="Quickly convert between units of length, weight, volume, temperature, and more. Use these accurate, free conversion calculators for daily tasks and professional needs.">
-<meta property="og:image" content="https://calclulo.com/assets/images/conversion calculators-thumbnail.png">
-
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com//conversion">
-<meta name="twitter:title" content="Free Conversion Calculators for Everyday Use">
-<meta name="twitter:description" content="Reliable and easy-to-use unit converters — from meters to feet, Celsius to Fahrenheit, MB to GB, and beyond. Trusted by students, professionals, and curious minds.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/conversion calculators-thumbnail.png">
+<meta property="og:url" content="https://calclulo.com/conversion">
+<meta property="og:title" content="Free Conversion Calculators">
+<meta property="og:description" content="Units conversation is not a frustrating issue to deal with. Conversion of measurements can be also transformed as easily as possible through the help of our conversion calculators and you can also be sure of the results that you are working with.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
@@ -42,8 +32,8 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Free Conversion Calculators",
-    "url": "https://calclulo.com//conversion",
-    "description": "Explore our collection of free conversion calculators for units like length, mass, volume, temperature, and data. Perfect for everyday use and professional work.",
+    "url": "https://calclulo.com/conversion",
+    "description": "Units conversation is not a frustrating issue to deal with. Conversion of measurements can be also transformed as easily as possible through the help of our conversion calculators and you can also be sure of the results that you are working with.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
