--- a/math.html
+++ b/math.html
@@ -5,37 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Math Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Math Calculators</title> 
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>         
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
 
-
-
 <link rel="manifest" href="/assets/manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Math Calculators for Students and Everyday Use">
-<meta name="description" content="Access a powerful set of free math calculators. Solve equations, percentages, fractions, and more with ease.">
-
-<meta name="author" content="Calclulo">
+<meta name="description" content="Our line up of math calculators means that anyone can answer and comprehend a broad variety of mathematical problems.">
 
 <link rel="canonical" href="https://calclulo.com/math">
 
-
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/math">
-<meta property="og:title" content="Free Math Calculators for Students and Everyday Use">
-<meta property="og:description" content="Solve math problems fast with free tools for percentages, equations, fractions, and more. Great for students, teachers, and daily use.">
-<meta property="og:image" content="https://calclulo.com/assets/images/math-calculators-thumbnail.png">
+<meta property="og:title" content="Free Math Calculators">
+<meta property="og:description" content="Our line up of math calculators means that anyone can answer and comprehend a broad variety of mathematical problems.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/math">
-<meta name="twitter:title" content="Free Math Calculators for Students and Everyday Use">
-<meta name="twitter:description" content="Simple and accurate math calculators for solving equations, percentages, and more. Built for school and everyday needs.">
-<meta name="twitter:image" content="https://calclulo.com/assets/images/math-calculators-thumbnail.png">
-
-<link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
+<link href="/favicons/favicon.png" rel="icon" sizes="48x48">
+<link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
+<link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
 
 <script type="application/ld+json">
   {
@@ -43,7 +37,7 @@
     "@type": "WebPage",
     "name": "Free Math Calculators",
     "url": "https://calclulo.com/math",
-    "description": "Explore our free math calculators to solve equations, percentages, fractions, and other problems with ease. Perfect for students, teachers, and daily tasks.",
+    "description": "Our line up of math calculators means that anyone can answer and comprehend a broad variety of mathematical problems.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
